--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ body {
 }
 
 /* ============================================
-   NAVIGATION
+   page web
    ============================================ */
 
 .navbar {
