--- a/css/animations.css
+++ b/css/animations.css
@@ -205,7 +205,7 @@
 }
 
 /* ============================================
-   ANIMATION UTILITIES
+   ANIMATION UTILITIE
    ============================================ */
 
 .animate-fade-in {
